<resources>
    <string name="app_name">nca</string>
    <string name="title_activity_main">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">nca</string>
    <string name="nav_header_subtitle">nca@flexmoney.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="content_authority">com.flexmoney.nca</string>
    <string name="sync_account_type">nca.flexmoney.com</string>
    <string name="households">Households</string>
    <string name="alternates">Alternates</string>
    <string name="attendance">Attendance</string>
    <string name="payments">Payments</string>
    <string name="reports">Reports</string>
    <string name="nominee">Nominee Eligibility</string>
    <string name="targetLocation">Registration Set up</string>
    <string name="btn_location">Start Registration</string>
    <string name="personal_information">Personal Information Registration</string>
    <string name="household_name">Beneficiary Name</string>
    <string name="age">Age</string>
    <string name="id_no">Id Number</string>
    <string name="phonenumber">Phonenumber(09********)</string>
    <string name="income_source">Source of Income</string>
    <string name="average_income">Monthly Average Income</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="spouse">Spouse Name</string>
    <string name="next">Next</string>
    <string name="gender">Gender</string>
    <string name="legal_status">Legal Status</string>
    <string name="marital_status">Marital Status</string>
    <string name="household_size">Household Size (Including yourself)</string>
    <string name="back">Back</string>
    <string name="male_members">Male Household Members</string>
    <string name="female_members">Female Household Members</string>
    <string name="zero_two">0–2 yrs Old</string>
    <string name="three_five">3–5 yrs Old</string>
    <string name="six_seventeen">6–17 yrs Old</string>
    <string name="eighteen_thirty_five">18–35 yrs Old</string>
    <string name="thirty_six_sixty_four">36–64 yrs Old</string>
    <string name="sixty_five_plus">Over 65 yrs Old</string>
    <string name="capture_photo">Capture Photo</string>
    <string name="fingerprint">Enrol Fingerprints</string>
    <string name="household_breakdown">Household Breakdown</string>
    <string name="right_thumb">Right Thumb</string>
    <string name="right_index">Right Index</string>
    <string name="right_middle">Right Middle</string>
    <string name="right_ring">Right Ring</string>
    <string name="right_little">Right Little</string>
    <string name="left_thumb">Left Thumb</string>
    <string name="left_index">Left Index</string>
    <string name="left_middle">Left Middle</string>
    <string name="left_ring">Left Ring</string>
    <string name="left_little">Left Little</string>
    <string name="county">County</string>
    <string name="state">State</string>
    <string name="payam">Payam</string>
    <string name="boma">Boma</string>
    <string name="complete_registration">Review and Complete Registration</string>
    <string name="reg_alternate">Register Alternate</string>
    <string name="alternate_name">Alternate Name</string>
    <string name="beneficiary_name">Beneficiary Name</string>
    <string name="enrolment_number">Enrolment Number</string>
    <string name="verify_fingerprint">Verify Fingerprint</string>
    <string name="btn_scan">Scan QR Code</string>
    <string name="amount">Amount</string>
    <string name="trans_id">Transaction Number</string>
    <string name="status">Status</string>
    <string name="title_activity_report">Reports</string>
    <string name="search">Search</string>
    <string name="payment_centre">Payment Centre</string>
    <string name="lat">Latitude</string>
    <string name="lon">Longitude</string>
    <string name="btn_payment_set_up">Save Payment Setups</string>
    <string name="payment_batches">Payment Batches (Cycles)</string>
    <string name="payment_verification">Payment Verification</string>
    <string name="payment_reader">QRCode Reader</string>
    <string name="payment_ben_list">Payment Beneficiaries List</string>
    <string name="alt_fp">Alternate Fingerprints</string>
    <string name="alternate_reg">Register Alternate</string>
    <string name="alternate_households">Choose Household</string>
    <string name="selection_reason">Selection Reason</string>
    <string-array name="selection_criteria">
        <item>Sub-Component 1 (Public Works)</item>
        <item>Sub-Component 2 (Direct Income Support)</item>
    </string-array>
    <string name="payment_setup">Setup Payments</string>
    <string name="edit_households">Edit Households</string>
    <string name="edit_alternate">Edit Alternate</string>
    <string name="payment_households">Payment Households</string>
    <string-array name="decisioning">
        <item>YES</item>
        <item>NO</item>
    </string-array>
    <string name="nominee_reason">What was the main reason for nominating first nominee first instead of second nominee for this new component?</string>
    <string-array name="ineligibility_reasons">
        <item>All eligible household members have other commitments that occupy their time</item>
        <item>I am uncertain about the ability of the household members to comply with the programs expectations or conditions</item>
        <item>The health or physical condition of the eligible household members prevents me from participating</item>
        <item>I am not convinced that the program will provide meaningful benefits</item>
        <item>The program activities do not align with my interests</item>
        <item>Other (Specify)</item>
    </string-array>
    <string-array name="gender_list">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="relationship">
        <item>Household Head</item>
        <item>Spouse or Wife</item>
        <item>Son or Daughter</item>
        <item>Son or Daughter in law</item>
        <item>Grand-child</item>
        <item>Father or Mother</item>
        <item>Father or Mother in law</item>
        <item>Sibling</item>
        <item>Other Relative</item>
        <item>Domestic Worker</item>
        <item>No Relation</item>
        <item>Does not know</item>
    </string-array>
    <string-array name="income_list">
        <item>None</item>
        <item>Selling of farm produce including crops or livestock and fishing</item>
        <item>Selling of non-farm goods (e.g. tea, fire wood, charcoal, grass, alcohol)</item>
        <item>Casual labour</item>
        <item>Formal employment</item>
        <item>Remittances</item>
        <item>Gift from family|friends</item>
        <item>Assistance from the Government</item>
        <item>Assistance from NGOs|charitable organization|church|mosque</item>
        <item>Pension</item>
        <item>Other (Specify)</item>
    </string-array>
    <string-array name="nominee_income_list">
        <item>None</item>
        <item>Employed in a formal job</item>
        <item>Casual work or daily wage labor</item>
        <item>Self-employed in a business or trade</item>
        <item>Agricultural work or farming</item>
        <item>Homemaker (manages household activities)</item>
        <item>Unemployed and actively seeking work</item>
        <item>Student or in education</item>
        <item>Disabled or chronically ill</item>
        <item>Retired or not working</item>
        <item>Other (Specify)</item>
    </string-array>
    <string-array name="legality">
        <item>Host Community</item>
        <item>IDP</item>
        <item>Refugee</item>
        <item>Returnee</item>
    </string-array>
    <string-array name="marital">
        <item>Married</item>
        <item>Single</item>
        <item>Widow</item>
        <item>Separated</item>
    </string-array>
    <string-array name="pw">
        <item>Poor household with no sufficient income to sustain the household</item>
        <item>Household contain able bodied youth member (18–35)</item>
        <item>Household headed by young men and women between the ages of 18–35</item>
        <item>Many members who are dependants (Household with more than 3 dependants)</item>
        <item>Poor households which have persons with severe disabilities</item>
    </string-array>
    <string-array name="dis">
        <item>Child-headed households with no alternate income support</item>
        <item>Elderly-headed household lacking alternate income support and able bodied member</item>
        <item>Persons with disability headed household lacking alternate income support and able bodied member</item>
        <item>Chronically-ill headed household lacking alternate income and able bodied member</item>
        <item>Female-headed household lacking alternate income support and able-bodied member</item>
    </string-array>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="household_head_relationship">Relationship to the Household Head</string>
    <string name="household_photo">Household Photo</string>
</resources>