<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".alternates.AlternateFingerprintsActivity">

    <ImageView
        android:id="@+id/ivAlternateFingerprint"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/fingerprint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/finger_edittext" />

    <LinearLayout
        android:id="@+id/llAlternateRightHand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivAlternateFingerprint"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:onClick="btnAlternateEnrolFinger"
            android:id="@+id/btnAlternateRightThumb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/darker_gray"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/finger_error"
            android:text="@string/right_thumb"
            android:textAllCaps="false" />

        <Button
            android:onClick="btnAlternateEnrolFinger"
            android:id="@+id/btnAlternateRightIndex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/darker_gray"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/finger_error"
            android:text="@string/right_index"
            android:textAllCaps="false" />

        <Button
            android:onClick="btnAlternateEnrolFinger"
            android:id="@+id/btnAlternateRightMiddle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/darker_gray"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/finger_error"
            android:text="@string/right_middle"
            android:textAllCaps="false" />

        <Button
            android:onClick="btnAlternateEnrolFinger"
            android:id="@+id/btnAlternateRightRing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/darker_gray"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/finger_error"
            android:text="@string/right_ring"
            android:textAllCaps="false" />

        <Button
            android:onClick="btnAlternateEnrolFinger"
            android:id="@+id/btnAlternateRightLittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/darker_gray"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/finger_error"
            android:text="@string/right_little"
            android:textAllCaps="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAlternateLeftHand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivAlternateFingerprint"
        app:layout_constraintTop_toBottomOf="@+id/llAlternateRightHand">

        <Button
            android:onClick="btnAlternateEnrolFinger"
            android:id="@+id/btnAlternateLeftThumb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/darker_gray"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/finger_error"
            android:text="@string/left_thumb"
            android:textAllCaps="false" />

        <Button
            android:onClick="btnAlternateEnrolFinger"
            android:id="@+id/btnAlternateLeftIndex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/darker_gray"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/finger_error"
            android:text="@string/left_index"
            android:textAllCaps="false" />

        <Button
            android:onClick="btnAlternateEnrolFinger"
            android:id="@+id/btnAlternateLeftMiddle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/darker_gray"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/finger_error"
            android:text="@string/left_middle"
            android:textAllCaps="false" />

        <Button
            android:onClick="btnAlternateEnrolFinger"
            android:id="@+id/btnAlternateLeftRing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/darker_gray"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/finger_error"
            android:text="@string/left_ring"
            android:textAllCaps="false" />

        <Button
            android:onClick="btnAlternateEnrolFinger"
            android:id="@+id/btnAlternateLeftLittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/darker_gray"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/finger_error"
            android:text="@string/left_little"
            android:textAllCaps="false" />
    </LinearLayout>


    <Button

        android:id="@+id/btnAlternateSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#33691E"
        android:text="@string/reg_alternate"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>